fix wizard steps not centered when step names have variable lengths, closes #27

--- a/less/availity-wizard.less
+++ b/less/availity-wizard.less
@@ -16,7 +16,7 @@
 .stepwizard-step {
   display: table-cell;
   text-align: center;
-  position: relative;
+  width: 1%;
 
   &.complete {
     > .btn-step {
